fixes labels that were too big

--- a/relieve/style.css
+++ b/relieve/style.css
@@ -133,3 +133,7 @@
             font-size: 12px;
         }
 
+        text.category-label {
+            font-size: 14px;
+        }
+
